# kyc-automation

./: .env.example  .gitignore  README.md  pyproject.toml
data/: SOP - International Account Opening.docx
data/embedded_objects/: Acceptable Address Proof Documents.pptx  Acceptable Identity Documents.pptx  NNS Proceed Checklist.xlsx  Supplement Address Proof Documents.pptx  Supplement Identity Documents.pptx
data/sample_cases/: sample_cases.json
data/sop_rules/: sop_rules.json  sop_rules_parsed.json  sop_rules_parsed_v2.json
scripts/: parse_sop_from_doc.py  parse_sop_from_doc_v2.py
src/kyc_automation/: main.py
src/kyc_automation/agents/: address_agent.py  identity_agent.py  nns_agent.py  orchestrator.py
src/kyc_automation/models/: __init__.py  case.py
src/kyc_automation/parser/: sop_parser.py
src/kyc_automation/rules/: engine.py
src/kyc_automation/utils/: client.py
tests/: test_agents_tools.py  test_rules_engine.py
